--- a/examples/simple_widgets/index.html
+++ b/examples/simple_widgets/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link href="../../include/css/widget.css" rel="stylesheet" type="text/css" />
-    <script src="../../MochiKit/trunk.js" type="text/javascript"></script>
+    <script src="../../trunk.js" type="text/javascript"></script>
     <script src="../../MochiKit/Base.js" type="text/javascript"></script>
     <script src="../../MochiKit/DateTime.js" type="text/javascript"></script>
     <script src="../../MochiKit/DOM.js" type="text/javascript"></script>
