--- a/examples/simple_widgets/index.html
+++ b/examples/simple_widgets/index.html
@@ -6,12 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link href="../../include/css/widget.css" rel="stylesheet" type="text/css" />
-    <script src="../../trunk.js" type="text/javascript"></script>
-    <script src="../../MochiKit/Base.js" type="text/javascript"></script>
-    <script src="../../MochiKit/DateTime.js" type="text/javascript"></script>
-    <script src="../../MochiKit/DOM.js" type="text/javascript"></script>
-    <script src="../../MochiKit/Style.js" type="text/javascript"></script>
-    <script src="../../MochiKit/Widget.js" type="text/javascript"></script>
+    <script src="../../packed.js" type="text/javascript"></script>
     <script type="text/javascript">
     function init() {
         // TODO: Automate setup of base icon image URL
